# fm

./: .gitignore  README.md  pyproject.toml
fm/: __init__.py  cli.py  config.py  core.py  docker.py  nginx.py  proxy.py  state.py
fm/templates/: docker-compose.yml.j2  nginx-bench.conf.j2
fm/utils/: __init__.py  interactive.py
